# Local-Delivery

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.db.yml  docker-compose.yml  example.xlsx  loader.py  pyproject.toml  requirements.txt
data/: config.py
filters/: users_filters.py
handlers/: __init__.py
handlers/admin/: __init__.py  admin.py  admin_delivery_orders.py  admin_delivery_statistics.py  admin_edit_delivery.py  admin_statistics.py  admin_stock.py
handlers/commands/: __init__.py  admin_commands.py  cancel_order.py  commands.py  delivery_couriers_commands.py  first.py  help.py  seller_admin_commands.py  start.py
handlers/couriers/: __init__.py  couriers.py
handlers/delivery_couriers/: __init__.py  delivery_courier.py
handlers/inline/: share.py
handlers/seller_admin/: __init__.py  edit_item_price_in_location.py  seller_admin_delivery_orders.py  seller_admin_statistics.py  seller_admins.py
handlers/sellers/: __init__.py  sellers_active_orders.py  sellers_bonus_orders.py  sellers_confirm_delivery.py  sellers_unaccepted_orders.py
handlers/users/: __init__.py  about.py  admin.py  admin_commands.py  admin_delivery_orders.py  admin_delivery_statistics.py  admin_statistics.py  back.py  back1.py  bonuses.py  cart.py  (+21 more)
states/: admin_state.py  bonus_state.py  menu_states.py  profile_states.py  seller_admin_states.py  sellers_states.py
utils/: check_states.py  emoji.py  get_prices.py  notify_admins.py  pagination.py  product_list.py  send_messages.py  set_bot_commands.py  statistics.py  temp_orders_list.py  test.py
(+7 files in other folders)
